Create theme isolated core

--- a/examples/itui-site-plugin-example/src/pages/index.mdx
+++ b/examples/itui-site-plugin-example/src/pages/index.mdx
@@ -1,10 +1,14 @@
 import Layout from '../layout'
+import {GatsbyLinkButton} from '../components/gatsby-link.js'
 
 export default Layout
 
 # Hello
 
 This page is written in [MDX][] and styled with [Theme UI][].
+
+<GatsbyLinkButton to={'/a'}>Theme A (deep)</GatsbyLinkButton>
+<GatsbyLinkButton to={'/b'}>Theme B (swiss)</GatsbyLinkButton>
 
 [theme ui]: https://theme-ui.now.sh
 [mdx]: https://mdxjs.com
